--- a/1.html
+++ b/1.html
@@ -137,9 +137,9 @@
         // MSAL configuration - Authorization Code Flow for SPAs
         const msalConfig = {
             auth: {
-                clientId: "369f395c-3610-4e08-ad5c-37e906bcd062",
+                clientId: "a5bf1192-640d-4b90-a60d-1818408b8b07",
                 authority: "https://login.microsoftonline.com/2348de7e-c063-4018-a666-012fbcc2efb1",
-                redirectUri: "https://roei-redler.github.io/testsso/"
+                redirectUri: "https://roei-redler.github.io/testsso/1"
             },
             cache: {
                 cacheLocation: "localStorage",
